--- a/bcp-web-app/index.html
+++ b/bcp-web-app/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>安否登録</title>
+
+    <!-- Vuetifyでマテリアルアイコンを使用する。 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
